--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
+@import url(https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;400&display=swap);
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+div,
+span,
+a,
+button {
+  font-family: 'Roboto Slab', 'Open Sans', 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+}
+
 .App {
   text-align: center;
 }
@@ -14,14 +37,15 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #AAA7CB;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #434343;
+  min-width: 360px;
 }
 
 .App-link {
@@ -35,4 +59,70 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+
+/*
+  DISPLAY
+*/
+
+.d-flex {
+  display: flex;
+}
+
+/*
+  SIZE
+*/
+
+.w-100 {
+  width: 100%;
+}
+
+/* SPACING */
+
+.pb-5 {
+  padding-bottom: 30px;
+}
+
+.pb-4 {
+  padding-bottom: 24px;
+}
+
+.pb-3 {
+  padding-bottom: 18px;
+}
+
+.pb-2 {
+  padding-bottom: 12px;
+}
+
+.pb-1 {
+  padding-bottom: 6px;
+}
+
+.mb-5 {
+  margin-bottom: 30px;
+}
+
+/* ALIGNMENT */
+
+.text-center {
+  text-align: center;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+/* 
+  TEXT
+*/
+
+.text-decoration-none {
+  text-decoration: none;
+}
+
+.user-select-none {
+  user-select: "none";
 }
