--- a/src/App.css
+++ b/src/App.css
@@ -194,11 +194,18 @@ button {
   MODAL
 */
 
+.custom-paper .MuiPaper-root {
+  background-color: transparent;
+  box-shadow: unset;
+}
+
 .modal-container{
-  padding-top: 40px;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
+  max-height: 500px;
 }
 
 
@@ -207,8 +214,8 @@ button {
   border: 6px solid #7469CF;
   border-radius: 20px;
   padding: 20px;
-  width: 30%;
-  height: 50%;
+  width: 450px;
+  height: 100%;
 
 }
 
