--- a/src/App.css
+++ b/src/App.css
@@ -210,7 +210,8 @@ button {
 
 
 .child {
-  background-color: #9B88C8;
+  background-color: #AAA7CB;;
+  
   border: 6px solid #7469CF;
   border-radius: 20px;
   padding: 20px;
