--- a/src/App.css
+++ b/src/App.css
@@ -200,6 +200,7 @@ button {
 }
 
 .modal-container{
+  padding-top: 200px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -259,10 +260,11 @@ button {
 
 .action-btn{
   border-radius: 100px !important;
-  background-color: #3a1747 !important;
-  height: 100px;
-  width: 100%;
-  margin-right: 5px !important;
+  background-color: transparent !important;
+  height: 75px;
+  width: 75px;
+  border: 3px solid #7469CF !important;
+  
 }
 
 /* vetements */
