--- a/src/App.css
+++ b/src/App.css
@@ -200,6 +200,7 @@ button {
 }
 
 .modal-container{
+  padding-top: 200px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -252,17 +253,18 @@ button {
 
 .nav-bar{
   width: 100%;
-  background-color: #9B88C8;
   margin: 0;
   padding: 0;
 }
 
 
 .action-btn{
-  border-radius: 10px !important;
-  background-color: #3a1747 !important;
-  height: 56px;
-  margin-right: 5px !important;
+  border-radius: 100px !important;
+  background-color: transparent !important;
+  height: 75px;
+  width: 75px;
+  border: 3px solid #7469CF !important;
+  
 }
 
 /* vetements */
