--- a/src/App.css
+++ b/src/App.css
@@ -199,8 +199,17 @@ button {
   box-shadow: unset;
 }
 
-.modal-container{
+.modal-container-clothes{
   padding-top: 200px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  max-height: 500px;
+}
+
+.modal-container{
   position: relative;
   display: flex;
   flex-direction: column;
@@ -280,4 +289,20 @@ button {
   100% {
       transform: scale(6.0);
   }
+}
+
+.test{
+  background-size: cover;
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
+}
+
+.tessssst{
+  background-color: #AAA7CB;;
+  border: 6px solid #7469CF;
+  border-radius: 20px;
+  padding: 20px;
+  width: 1000px;
+  height: 100%;
 }
