--- a/src/App.css
+++ b/src/App.css
@@ -199,8 +199,31 @@ button {
   box-shadow: unset;
 }
 
+@media screen and (min-width: 900px) {
+  .modal-container-clothes{
+    padding-top: 5%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    max-height: 500px;
+  }
+  .clothes-modal{
+    background-color: #AAA7CB;;
+    border: 6px solid #7469CF;
+    border-radius: 20px;
+    padding: 20px;
+    width: 1000px;
+    height: 100%;
+  }
+  .body-kid{
+    height: 100% !important;
+    width: 100% !important;
+  }
+};
 .modal-container-clothes{
-  padding-top: 200px;
+  padding-top: 2% !important;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -221,7 +244,6 @@ button {
 
 .child {
   background-color: #AAA7CB;;
-  
   border: 6px solid #7469CF;
   border-radius: 20px;
   padding: 20px;
@@ -278,7 +300,7 @@ button {
 
 /* vetements */
 
-.upperbody{
+.clothe{
   width: 25%;
 }
 
@@ -291,18 +313,15 @@ button {
   }
 }
 
-.test{
-  background-size: cover;
+.body-kid{
   height: 100%;
-  overflow: hidden;
-  width: 100%;
+  width: 80%;
 }
 
-.tessssst{
+
+.clothes-modal{
   background-color: #AAA7CB;;
   border: 6px solid #7469CF;
   border-radius: 20px;
   padding: 20px;
-  width: 1000px;
-  height: 100%;
 }
